--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: My Website
+title: Stefanie Elling
 
 # Your name to show in the footer
-author: Some Person
+author: Stefanie Elling
 
 # --- List of links in the navigation bar --- #
 
@@ -39,12 +39,10 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: c/daattali
+  email: ellingse@g.cofc.edu
+  facebook: stefanieelling
+  github: https://github.com/stefanieelling
+  twitter: stefanieelling
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
