--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,9 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: ellingse@g.cofc.edu
-  facebook: stefanieelling
+#  facebook: stefanieelling
   github: https://github.com/stefanieelling
-  twitter: stefanieelling
+ # twitter: stefanieelling
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
@@ -62,7 +62,7 @@ social-network-links:
 
 # If you want to show a link to an RSS in the footer, add the site description here.
 # If you don't want to show an RSS link, remove the following line.
-rss-description: This website is a virtual proof that I'm awesome
+rss-description: This is where I keep track of my class work and progress. 
 
 # --- General options --- #
 
@@ -75,7 +75,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "stefanie_elling.github.io"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
